|
Quick Lists
|
|
Bug ID:
|
6833129
|
|
Votes
|
0
|
|
Synopsis
|
specjvm98 fails with NullPointerException in the compiler with -XX:DeoptimizeALot
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs16(b08),
6u18(b01) (Bug ID:2181941)
, 7(b71) (Bug ID:2182198)
|
|
State
|
11-Closed,
Unverified,
bug
|
|
Priority:
|
5-Very Low
|
|
Related Bugs
|
6589834
,
6840775
,
6889869
|
|
Submit Date
|
22-APR-2009
|
|
Description
|
This is split out from CR 6589834. The failure occurs on 32-bit vm on x86 platforms.
The following comments is from CR 6589834 description.
>With the internal testing option -XX:+DeoptimizeALot, running the SPECJVM98
>test _213_javac fails with NullPointerException. While this started occurring
>with the 20070413103655.jrose.dolphin-intrinsics putback, it is actually an
>existing incompatibility between the deoptimization support and the intrinsic
>inlining of the server compiler.
The failures are intermittent, and appear in tests other than _213_javac in specjvm98
as well. -XX:-InlineArrayCopy could be used to suppress the failures.
Posted Date : 2009-04-22 17:28:52.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See comments for details. We will have to re-execute the clone or copyOf invoke instruction rather than continue.
Posted Date : 2009-06-30 16:29:51.0
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/9987d9d5eb0e
Posted Date : 2009-08-01 04:49:35.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/9987d9d5eb0e
Posted Date : 2009-08-10 07:36:53.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |